--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "personalwebsiteofshengyang",
   "version": "1.0.0",
   "description": "personal website for Sheng Yang (Bruce)",
-  "main": "server/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "build": "webpack -p",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,8 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "babel-preset-stage-1": "^6.16.0"
   }
 }
