--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "express": "^4.14.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-player": "^0.14.1",
     "react-router": "^3.0.0",
-    "react-video": "^1.5.3",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
