--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "nodemailer": "^2.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-player": "^0.14.1",
