--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "nodemailer": "^2.7.0",
@@ -41,6 +42,5 @@
     "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
-    "babel-preset-stage-1": "^6.16.0"
   }
 }
